--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,6 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SevenApp"
         tools:targetApi="31">
+        <activity
+            android:name=".LanguageChange"
+            android:exported="false" />
         <activity
             android:name=".WeeklyListActivity"
             android:exported="false" />
@@ -31,7 +35,8 @@
         <activity
             android:name=".ConfirmAddress"
             android:exported="false" />
-        <activity android:name=".PlacePickerActivity"
+        <activity
+            android:name=".PlacePickerActivity"
             android:exported="false" />
         <activity
             android:name=".Repeat"
@@ -47,8 +52,8 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".SingUp"
             android:exported="false" />
