--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SevenApp"
         tools:targetApi="31">
+        <receiver android:name=".EventWidgetUpdateReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.example.sevenapp.ACTION_UPDATE_EVENT_WIDGET" />
+            </intent-filter>
+        </receiver>
+
+        <receiver
+            android:name=".EventWidget"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/event_widget_info" />
+        </receiver>
+
         <activity
             android:name=".LanguageChange"
             android:exported="false" />
