--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,13 +23,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SevenApp"
         tools:targetApi="31">
-        <receiver android:name=".EventWidgetUpdateReceiver"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.example.sevenapp.ACTION_UPDATE_EVENT_WIDGET" />
-            </intent-filter>
-        </receiver>
-
         <receiver
             android:name=".EventWidget"
             android:exported="false">
@@ -41,6 +34,13 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/event_widget_info" />
         </receiver>
+        <receiver android:name=".EventWidgetUpdateReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.example.sevenapp.EVENT_DATABASE_UPDATED"/>
+            </intent-filter>
+        </receiver>
+
 
         <activity
             android:name=".LanguageChange"
